--- a/Tareas/HTML/división.html
+++ b/Tareas/HTML/división.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divición</title>
 </head>
-<body onload="Divición()">
-    <script src="./../JS/divición.js"></script>
+<body onload="División()">
+    <script src="./../JS/división.js"></script>
 </body>
 </html>
