Comparación de edad

--- a/práctica3/HTML/index.html
+++ b/práctica3/HTML/index.html
@@ -9,8 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-  <body>
-
+  <body onload="CambioOpciones()">
+<!--
     <div class="jumbotron mt-2">
     <div class="input-group">
         <div class="input-group-prepend">
@@ -57,7 +57,7 @@
          <label for="" class="ml-2 mt-2">Opción3</label>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <!-- Optional JavaScript -->
     <script src="./../JS/app.js"></script>
