--- a/Tareas/HTML/calificación.html
+++ b/Tareas/HTML/calificación.html
@@ -20,8 +20,8 @@
                   placeholder="Ingresa calificación de 10-0">
               </div>
               <button type="button" name="" id="resultado" onclick="calcularcalificacion()" 
-              class="btn btn-primary btn-lg btn-block">Convertir calificación</button>
-              <div class="alert alert-success mt-2" role="alert" id="imprimircalificaciones"></div>
+              class="btn btn-primary btn-lg btn-block">Imprimir Resultado</button>
+              <div class="alert alert-success mt-2" role="alert" id="imprimircalificaciones">Letra</div>
           </div>
       </div>
       
