--- a/Tareas/HTML/calificación2.html
+++ b/Tareas/HTML/calificación2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>SelectDíasSemana</title>
+    <title>Calificaciones2</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,28 +12,32 @@
   <body>
       <div class="container mt-2">
           <div class="jumbotron mt-2">
-              <h1 class="text-center">Días semana</h1>
+              <h1 class="text-center">CALIFICACIONES CON SELECT</h1>
+
               <div class="form-group">
-                <label for="">Selecciona un día de la semana</label>
-                <select class="form-control" name="" id="dias">
-                  <option>selecciona</option>
-                  <option value="1">Dia 1</option>
-                  <option value="2">Dia 2</option>
-                  <option value="3">Dia 3</option>
-                  <option value="4">Dia 4</option>
-                  <option value="5">Dia 5</option>
-                  <option value="6">Dia 6</option>
-                  <option value="7">Dia 7</option>
+                <label for="">Selecciona la calificación</label>
+                <select class="form-control" name="" id="calificacion">
+                  <option>10</option>
+                  <option>9</option>
+                  <option>8</option>
+                  <option>7</option>
+                  <option>6</option>
+                  <option>5</option>
+                  <option>4</option>
+                  <option>3</option>
+                  <option>2</option>
+                  <option>1</option>
+                  <option>0</option>
                 </select>
               </div>
-              <button type="button" name="" id="semana" onclick="CalcularDias()" 
-              class="btn btn-primary btn-lg btn-block">calcular dias</button>
-              <div class="alert alert-dark mt-2" role="alert" id="imprimirdias"></div>
+              <button type="button" name="" id="calcular"  onclick="calcalificaciones()"
+              class="btn btn-primary btn-lg btn-block">Calcular a que letra corresponde</button>
+              <div class="alert alert-primary mt-2" role="alert" id="resultado"></div>
           </div>
       </div>
       
     <!-- Optional JavaScript -->
-    <script src="./../JS/selectdiassemana.js"></script>
+    <script src="./../JS/calificación2.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
