--- a/PracticasIF/HTML/multiplos.html
+++ b/PracticasIF/HTML/multiplos.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>NúmerosMultiplos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,20 +9,29 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-  <body onload="ImprimirNúmeros()">
-
-    <div class="jumbotron" onclick="ImprimirNúmeros()">
-      <div class="form-group">
-        <label for=""></label>
-        <input type="text"
-          class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
-        </div>
-        <div class="alert alert-primary" role="alert">
-            A simple primary alert—check it out!
+  <body>
+      <div class="container mt-2">
+          <div class="jumbotron">
+              <h1 class="text-center">Multiplos</h1>
+              <div class="form-group">
+                <label for="">Ingresa el primer número</label>
+                <input type="number"
+                  class="form-control" name="" id="uno" aria-describedby="helpId" placeholder="">
+              </div>
+              <div class="form-group">
+                <label for="">Ingresa el segundo número</label>
+                <input type="number"
+                  class="form-control" name="" id="dos" aria-describedby="helpId" placeholder="">
+              </div>
+              <button type="button" name="" id="calcular" onclick="multiplo()" 
+              class="btn btn-primary btn-lg btn-block">Calcula</button>
+              <div class="alert alert-light mt-2" role="alert" id="alerta">
+              </div>
           </div>
-    </div>
+      </div>
+      
     <!-- Optional JavaScript -->
-    <script src="./../JS/app.js"></script>
+    <script src="./../JS/multiplos.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
