--- a/Tareas/HTML/multiplode3.html
+++ b/Tareas/HTML/multiplode3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Multiplode3</title>
+    <title>multiplosde5</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,7 +14,7 @@
           <div class="jumbotron">
               <h1 class="text-center">Muliplo de 3 descendiendo</h1>
               <button type="button" name="" id="boton"  onclick="multiplo3()"
-              class="btn btn-primary btn-lg btn-block">
+              class="btn btn-primary" btn-lg btn-block">
             click</button>
             <ul class="list-group" id="listado"></ul>
           </div>
