--- a/Tareas/HTML/ejercicioIF6.html
+++ b/Tareas/HTML/ejercicioIF6.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Ejercicio1</title>
+    <title>Ejercicio6</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,23 +11,21 @@
   </head>
   <body>
       <div class="container mt-2">
-          <div class="jumbotron">
-              <h1 class="text-center">Ejercicio1</h1>
+          <div class="jumbotron mt-2">
+              <h1 class="text-center">Ejercicio6</h1>
               <div class="form-group">
-                <label for="">Ingresa su numero de cliente</label>
+                <label for="">Ingresa un año</label>
                 <input type="number"
-                  class="form-control" name="" id="numero" aria-describedby="helpId" placeholder="">
+                  class="form-control" name="" id="año" aria-describedby="helpId" placeholder="">
               </div>
-              <button type="button" name="" id="boton" onclick="numeroganador()"
-              class="btn btn-primary" btn-lg btn-block">
-               Click
-              </button>
+              <button type="button" name="" id="boton" onclick="añobi()"
+              class="btn btn-primary" btn-lg btn-block">Calcular año bisiesto</button>
               <div class="alert alert-primary mt-2" role="alert" id="imprimir"></div>
           </div>
       </div>
       
     <!-- Optional JavaScript -->
-    <script src="../JS/ejercicioIF1.js"></script>
+    <script src="../JS/ejercicioIF6.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
