--- a/ARREGLOS/HTML/tareasuma.html
+++ b/ARREGLOS/HTML/tareasuma.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Suma return</title>
+    <title>Tarea Suma</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,19 +12,22 @@
   <body>
       <div class="container">
           <div class="jumbotron">
-            <button type="button" name="" id="click" 
-            class="btn btn-primary" btn-lg btn-block"></button>
-            <div class="alert alert-secondary" role="alert"></div>
+            <h1 class="text-center">SUMA</h1>
+            <button type="button" name="" id="click1" onclick="calcularsuma1()"
+            class="btn btn-primary" btn-lg btn-block">calcular</button>
+            <div class="alert alert-secondary mt-2" role="alert" id="calculasuma1"></div>
           </div>
           <div class="jumbotron">
-            <button type="button" name="" id="click" 
-            class="btn btn-primary" btn-lg btn-block"></button>
-            <div class="alert alert-secondary" role="alert"></div>
+            <h1 class="text-center">SUMA CON PARAMETROS</h1>
+            <button type="button" name="" id="click2" onclick="sumaparametros()" 
+            class="btn btn-primary" btn-lg btn-block">calcular</button>
+            <div class="alert alert-secondary mt-2" role="alert" id="calculasuma2"></div>
           </div>
           <div class="jumbotron">
-            <button type="button" name="" id="click" 
-            class="btn btn-primary" btn-lg btn-block"></button>
-            <div class="alert alert-secondary" role="alert"></div>
+            <h1 class="text-center">SUMA RETURN</h1>
+            <button type="button" name="" id="click3" onclick="sumareturn()"
+            class="btn btn-primary" btn-lg btn-block">calcular</button>
+            <div class="alert alert-secondary mt-2" role="alert" id="calculasuma3"></div>
           </div>
       </div>
     <!-- Optional JavaScript -->
